--- a/mini-services/telegram-bot/package.json
+++ b/mini-services/telegram-bot/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "Premium OSINT Telegram Bot",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "dev": "bun --hot index.js",
-    "start": "bun index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.64.0",
@@ -14,8 +12,5 @@
     "cheerio": "^1.0.0-rc.12",
     "@prisma/client": "^5.7.1",
     "dotenv": "^16.3.1"
-  },
-  "devDependencies": {
-    "prisma": "^5.7.1"
   }
 }
